syntax = "proto3";

package ecliptix.proto.common;
option csharp_namespace = "Ecliptix.Protobuf.Common";

// Common result codes used across services
enum ResultCode {
  SUCCESS = 0;
  INVALID_REQUEST = 1;
  UNAUTHORIZED = 2;
  FORBIDDEN = 3;
  NOT_FOUND = 4;
  CONFLICT = 5;
  RATE_LIMITED = 6;
  INTERNAL_ERROR = 7;
}

// Common error response
message ErrorResponse {
  ResultCode code = 1;
  string message = 2;
  map<string, string> details = 3;
}
